--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'com.android.support', module: 'design'
     }
+    compile 'com.wdullaer:materialdatetimepicker:2.2.0'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
    /* compile('com.mikepenz:materialdrawer:4.6.4@aar') {
         transitive = true
     }*/
