--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.wdullaer:materialdatetimepicker:2.2.0'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'org.apache.commons:commons-io:1.3.2'
    /* compile('com.mikepenz:materialdrawer:4.6.4@aar') {
         transitive = true
     }*/
