--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "26.0.2"
+    buildToolsVersion "23.1.2"
 
     defaultConfig {
         applicationId "ru.kvartira_omsk.realtorapp"
@@ -10,10 +10,12 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true //Add this
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
+            //shrinkResources true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -33,8 +35,16 @@ dependencies {
     compile 'com.wdullaer:materialdatetimepicker:2.2.0'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'org.apache.commons:commons-io:1.3.2'
+    //compile 'org.apache.commons:commons-io:1.3.2'
+    compile  'commons-io:commons-io:1.3.2'
    /* compile('com.mikepenz:materialdrawer:4.6.4@aar') {
         transitive = true
     }*/
 }
+
+/*allprojects {
+    tasks.withType(JavaCompile) {
+        options.deprecation = false
+        options.compilerArgs << "-Xlint:deprecation"
+    }
+}*/
