--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
    /* compile('com.mikepenz:materialdrawer:4.6.4@aar') {
         transitive = true
     }*/
+    compile 'com.daimajia.slider:library:1.1.5@aar'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.squareup.picasso:picasso:2.3.2'
 }
 
 /*allprojects {
