--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
+    implementation 'com.google.android.gms:play-services-ads:18.3.0'
     implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation ('com.github.ganfra:material-spinner:1.1.1'){
         exclude group: 'com.android.support', module: 'appcompat-v7'
